--- a/Digitalmedia/assets/css/style.css
+++ b/Digitalmedia/assets/css/style.css
@@ -171,6 +171,16 @@ body.navbar-active{
 .w-100{
   width: 100%;
 }
+.text-center{
+  text-align: center;
+}
+.section-text{
+  margin-block: 15px 50px;
+}
+.grid-list{
+  display: grid;
+  gap: 50px;
+}
 
 
 /*-----------------------------------*\
@@ -291,9 +301,35 @@ body.navbar-active{
   #PROCESS
 \*-----------------------------------*/
 
+.process-banner{
+  display: none;
+}
+.process{
+  position: relative;
+  z-index: 1;
+}
+.process::after{
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../images/process-bg.png");
+  background-repeat: no-repeat;
+  background-position: left;
+  background-size: cover;
+  pointer-events: none;
+  z-index:-1;
+}
 
-
-
+.process-item .item-icon{
+margin-inline: auto;
+filter: var(--shadow-1);
+}
+.process-item .item-title{
+  margin-block: 20px 10px;
+}
 
 /*-----------------------------------*\
   #WORK
