--- a/Digitalmedia/assets/css/style.css
+++ b/Digitalmedia/assets/css/style.css
@@ -182,6 +182,18 @@ body.navbar-active{
   gap: 50px;
 }
 
+.img-holder{
+  aspect-ratio: var(--weight)/var(--height);
+  background-color: var(--bg-white-alpha-10);
+  overflow: hidden;
+}
+.img-cover{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: var(--transition-2);
+}
+
 
 /*-----------------------------------*\
   #HEADER
@@ -334,9 +346,25 @@ filter: var(--shadow-1);
 /*-----------------------------------*\
   #WORK
 \*-----------------------------------*/
+.work-card .card-banner {
+  border-radius: var(--radius-40);
+  margin-block-end: 20px;
 
-
-
+}
+.work-card:is(:hover,:focus-within) .img-cover{
+  transform: scale(1.1);
+}
+.work-card .card-title{
+  margin-block-end: 12px;
+  transition: var(--transition-1);
+}
+.work-card .card-title:is(:hover,:focus-visible){
+  color: var(--text-sunglow);
+}
+.works .btn{
+  margin-block-start: 60px;
+  margin-inline: auto;
+}
 
 
 /*-----------------------------------*\
