--- a/Digitalmedia/assets/css/style.css
+++ b/Digitalmedia/assets/css/style.css
@@ -153,7 +153,7 @@ body.navbar-active{
 }
 .btn{
   height: 62px;
-  padding-inline: var(--weight-semiBold);
+  padding-inline: 50px;
   border-radius: var(--radius-pill);
   color: var(--text-black);
   display: grid;
@@ -370,11 +370,53 @@ filter: var(--shadow-1);
 /*-----------------------------------*\
   #FOOTER
 \*-----------------------------------*/
-
-
-
-
-
+.footer{
+  background-color: var(--bg-russian-violet);
+  color: var(--text-white);
+}
+.footer-top{
+  padding-block-start: var(--section-spacing);
+}
+.footer-top .container{
+  display: grid;
+  gap: 50px;
+}
+.footer-text{
+  margin-block: 15px;
+}
+.social-list{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-block-end: 30px;
+}
+.social-link{
+  color: var(--text-sunglow);
+  font-size: 2.2rem;
+}
+.footer .btn{
+  font-size: var(--fontSize-5);
+  padding-inline: 60px;
+}
+.footer-list{
+  display: grid;
+  gap: 15px;
+}
+.footer-bottom{
+  padding-block: 40px;
+  border-block-start: 1px solid var(--border-white-alpha-10);
+}
+.footer .link{
+  display: inline-block;
+  color: var(--text-sunglow);
+}
+.footer-bottom-list{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-block-start: 20px;
+}
 /*-----------------------------------*\
   #MEDIA QUERIES
 \*-----------------------------------*/
