--- a/Digitalmedia/assets/css/style.css
+++ b/Digitalmedia/assets/css/style.css
@@ -420,6 +420,6 @@ filter: var(--shadow-1);
 /*-----------------------------------*\
   #MEDIA QUERIES
 \*-----------------------------------*/
-
+/* responsive for large than 575px screen */
 
 
