--- a/Ecommerce Product Page Using HTML and CSS  Furniture Website/style.css
+++ b/Ecommerce Product Page Using HTML and CSS  Furniture Website/style.css
@@ -188,3 +188,12 @@ transition: background 0.4s ease-in-out;
 .chevron-icon:hover{
     background: var(--pacificBlue);
 }
+
+/* featured */
+.underline{
+    height: 5px;
+    width: 80%;
+    background-color: var(--greyWhite);
+    margin: 0 auto;
+    border-radius: 15px;
+}
