--- a/Ecommerce Product Page Using HTML and CSS  Furniture Website/style.css
+++ b/Ecommerce Product Page Using HTML and CSS  Furniture Website/style.css
@@ -210,3 +210,54 @@ transition: background 0.4s ease-in-out;
 .featured-item >div{
     padding: 24px;
 }
+.featured-item .item-price{
+    font-weight: 700;
+    font-size: 20px;
+}
+.featured-item{
+    margin-bottom: 36px;
+}
+.featured-item:nth-child(even){
+    background: var(--greyWhite);
+}
+.featured-item:last-child{
+    margin-bottom: 0;
+}
+/* blog */
+.blog-item{
+    background-color: var(--greyWhite);
+    margin: 30px 0;
+}
+.blog-item:last-of-type{
+    margin-bottom: 0;
+}
+.blog-item-img{
+    overflow: hidden;
+}
+.blog-item-img img{
+    transition: transform 0.4s ease-in-out;
+}
+.blog-item-img:hover img{
+    transform: scale(1.1);
+}
+.blog-item-content{
+    padding: 28px;
+}
+
+.blog-item-content a{
+    text-transform: capitalize;
+    text-decoration: none;
+    font-size: 22px;
+    font-weight: 500;
+    font-family: sans-serif;
+    display: block;
+    padding: 6px 0;
+    color: var(--blackRussian);
+}
+
+
+
+
+
+
+
