--- a/HTML eCommerce site, CSS Javascript – Complete multi-page responsiveness/style.css
+++ b/HTML eCommerce site, CSS Javascript – Complete multi-page responsiveness/style.css
@@ -176,6 +176,7 @@ header li>a {
     display: flex;
     position: relative;
     line-height: inherit;
+    transition: var(--trans-background);
 }
 
 .header-top .wrapper{
@@ -190,6 +191,27 @@ header li>a {
 .header-top li{
     position: relative;
 }
+
+.header-top ul ul{
+    position: absolute;
+    left: -1em;
+    line-height: 2em;
+    background-color: var(--white-color);
+    border: 1px solid var(--border-color);
+    z-index: 1;
+    display: none;
+}
+.header-top .right ul ul li a{
+    padding: 0.25em 1em;
+}
+.header-top .right ul ul li.current a{
+ background-color: var(--border-color);
+}
+.header-top li:hover ul{
+    display: block;
+}
+
+
 @media screen and(min-width:992px) {
     .container {
         padding: 0 2em;
