--- a/HTML eCommerce site, CSS Javascript – Complete multi-page responsiveness/style.css
+++ b/HTML eCommerce site, CSS Javascript – Complete multi-page responsiveness/style.css
@@ -171,6 +171,10 @@ h4 {
     padding: 0 0.75em 0 0;
 }
 
+.mobile-hide {
+    display: none;
+}
+
 /* header */
 header li>a {
     display: flex;
@@ -179,20 +183,22 @@ header li>a {
     transition: var(--trans-background);
 }
 
-.header-top .wrapper{
+.header-top .wrapper {
     font-size: var(--font-small);
     font-weight: var(--fw3);
     justify-content: space-between;
     line-height: 42px;
 }
-.header-top .wrapper ul{
+
+.header-top .wrapper ul {
     gap: 2em;
 }
-.header-top li{
+
+.header-top li {
     position: relative;
 }
 
-.header-top ul ul{
+.header-top ul ul {
     position: absolute;
     left: -1em;
     line-height: 2em;
@@ -201,19 +207,135 @@ header li>a {
     z-index: 1;
     display: none;
 }
-.header-top .right ul ul li a{
+
+.header-top .right ul ul li a {
     padding: 0.25em 1em;
 }
-.header-top .right ul ul li.current a{
- background-color: var(--border-color);
+
+.header-top .right ul ul li.current a {
+    background-color: var(--border-color);
 }
-.header-top li:hover ul{
+
+.header-top li:hover ul {
     display: block;
 }
 
+/* header-nav */
+.header-nav{
+    padding: 0.5em 0;
+    margin-bottom: 1.5em;
+    border-bottom: 1px solid var(--border-color);
+}
+/* nut menu */
+.trigger {
+    font-size: 1.5em;
+    display: flex;
+    padding: 0.25em;
+    margin-right: 0.5em;
+ 
+}
 
-@media screen and(min-width:992px) {
+.logo a {
+    font-family: 'Rubik';
+    font-size: 1.75em;
+    position: relative;
+    font-weight: var(--fw8);
+    display: flex;
+    padding: 0.75em;
+    margin-right: 2em;
+}
+
+.circle {
+    position: absolute;
+    top: -15px;
+    left: 0;
+    width: 38px;
+    height: 38px;
+    border-radius: var(--percent50);
+    background-color: var(--light-bg-color);
+    z-index: -1;
+}
+
+.circle::before {
+    content: '';
+    position: absolute;
+    width: 28px;
+    height: 28px;
+    border-radius: var(--percent50);
+    background-color: var(--secondary-color);
+    bottom: 5px;
+    right: 5px;
+    opacity: 0.4;
+}
+
+.header-nav nav>ul {
+    line-height: 100px;
+    gap: 2em;
+}
+
+.fly-item {
+    position: absolute;
+
+    height: 16px;
+    font-size: var(--font-small);
+    padding: 3px;
+    text-align: center;
+    line-height: 10px;
+    color: var(--white-color);
+
+}
+
+nav .fly-item {
+    top: 50%;
+    margin-top: -24px;
+    width: 30px;
+    border-radius: 3px;
+    right: -32px;
+    background-color: var(--primary-color);
+}
+
+.header-nav .right {
+    position: relative;
+    margin-left: auto;
+}
+
+.header-nav .right .icon-large {
+    position: relative;
+}
+
+.header-nav .right .fly-item {
+    top: 0;
+    width: 16px;
+    right: 16px;
+    background-color: var(--secondary-dark-color);
+    border-radius: var(--percent50);
+}
+
+@media screen and (min-width:992px) {
     .container {
         padding: 0 2em;
+    }
+
+
+    .desktop-hide {
+        display: none;
+    }
+
+    .mobile-hide {
+        display: block;
+    }
+
+    .logo a {
+        margin-right: 2em;
+    }
+
+    .header-nav {
+        padding: 0;
+        margin: 0;
+        border-bottom: 0;
+
+    }
+    .header-nav .right li >a{
+        margin-left: 1em;
     }
 }
