--- a/Ecommerce Product Page Using HTML and CSS  Furniture Website/style.css
+++ b/Ecommerce Product Page Using HTML and CSS  Furniture Website/style.css
@@ -255,9 +255,214 @@ transition: background 0.4s ease-in-out;
     color: var(--blackRussian);
 }
 
+/* newsletter */
+.newsletter{
+    padding: 0;
+}
+.form-group{
+    margin: 30px 0;
+}
+.newsletter .container-fluid{
+    background-color: var(--blackRussian);
+    color: #fff;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+}
+.newsletter .title{
+    align-items: center;
+}
+.form-control ,.subscrible-btn{
+ font-size: 18px;
+ padding: 7px 10px;
+ display: block;
+ border: none;
+ outline: 0;
+}
+.form-control{
+    color: var(--blackRussian);
+    font-weight: 400;
+    padding: 16px 28px;
+    border-radius: 50px;
+    width: 100%;
+}
+.subscrible-btn{
+    background-color: var(--blackRussian);
+    color: #fff;
+    border: 1.5px solid var(--greyWhite);
+    display: block;
+    padding: 10px 28px;
+    margin: 22px auto;
+    border-radius: 25px;
+    cursor: pointer;
+    transition: all 0.5s ease;
+}
+.subscrible-btn:hover{
+    color: var(--pacificBlue);
+    border-color: var(--pacificBlue);
+}
+.circle-box{
+    border: 4px solid #fff;
+    height: 300px;
+    width: 300px;
+    border-radius: 50%;
+    position: absolute;
+}
+.circle-1{
+    top: -150px;
+    left: -150px;
+}
+.circle-2{
+    bottom: -150px;
+    right:  -150px;
+}
+/* footer */
+.footer{
+    background-color: var(--blackRussian);
+    text-align: center;
+}
+.footer .brand-name{
+    margin: 24px 0;
+}
+.footer a{
+    text-decoration: none;
+    color: var(--blackRussian);
+}
+.footer a:hover{
+    opacity: 0.7;
+}
+.footer ul li{
+    list-style: none;
+    padding: 2px 0;
+}
+.footer a, .footer p{
+    text-transform: capitalize;
+    font-size: 15px;
+    color: #fff;
+    font-weight: 500;
+    opacity: 0.9;
+}
+.footer h3{
+    text-transform: uppercase;
+    padding: 12px 0;
+    color: var(--greyWhite);
+}
+.footer-icons{
+    display: flex;
+    justify-content: center;
+}
+.footer-icons li{
+    margin: 10px;
+   
+}
+/* media queries */
+@media screen and (min-width:768px) {
+    .trend-grid{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 32px;
+    }
+    .trend-item{
+        margin: 0;
+    }
+    .featured-item{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        align-items: center;
+    }
+    .featured-item:nth-child(even) .featured-item-img{
+        order: 2;
+    }
+    .blog-grid{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 16px;
+    }
+    .footer{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 16px;
+    }
+    @media screen and (min-width:992px) {
+        .container-fluid{
+            padding: 5rem 10rem;
+        }
+        .head-body-content{
+            flex: 1;
+            height: auto;
+            align-items: flex-start;
+            text-align: left;
+        }
+        .head-body-img{
+            flex: 1;
+        }
+        .head-body-img img{
+            width: 100%;
+        }
+        .blog-grid{
+            gap: 32px;
+        }
+        .footer{
+            grid-template-columns: 1fr 1fr 1fr 1fr;
+        }
+    }
+    @media screen and (min-width:1200px) {
+        .trend-grid{
+            grid-template-columns: 1fr 1fr 1fr;
+        }
+        .featured-item{
+            gap: 20px;
+        }
 
-
-
-
-
-
+    }
+    @media screen and (max-width:400px) {
+        .head-top{
+            flex-direction: column;
+        }
+        .head-icon:first-child{
+            margin-left: 0;
+        }
+        .brand-name{
+            margin-bottom: 20px;
+        }
+        .head-body-content h1{
+            font-size: 30px;
+        }
+        .head-body-content p{
+            display: none;
+        }
+        .head-body .container-fluid{
+            padding-top: 1.5rem;
+            padding-bottom: 2rem;
+        }
+        .featured-btns{
+            display: flex;
+            flex-direction: column;
+        }
+        .featured-btns button{
+            width: 100%;
+            margin: 8px 0 !important;
+        }
+        .form-control .subscrible-btn{
+            font-size: 16px;
+        }
+        .form-control{
+            width: 255px;
+        }
+        .circle-box{
+            height: 150px;
+            width: 150px;
+        }
+        .circle-1{
+            top: -75px;
+            left: -75px;
+        }
+        .circle-1{
+            bottom: -75px;
+            right: -75px;
+        }
+    }
+}
