--- a/HTML eCommerce site, CSS Javascript – Complete multi-page responsiveness/style.css
+++ b/HTML eCommerce site, CSS Javascript – Complete multi-page responsiveness/style.css
@@ -406,7 +406,8 @@ nav .fly-item {
     align-items: center;
 }
 
-.dpt-menu .has-child > ul, .dpt-menu .mega{
+.dpt-menu .has-child>ul,
+.dpt-menu .mega {
     position: absolute;
     top: 0;
     left: var(--percent100);
@@ -421,27 +422,35 @@ nav .fly-item {
     display: none;
     /* background-position: right bottom; */
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: auto;
+    object-fit: cover;
 }
 
 /* showing the first sub menu */
-.dpt-menu .mega{
-    display: block;
+.dpt-menu .mega {
+    display: none;
 }
-.dpt-menu .beauty ul{
-    background-image: url(https://images.unsplash.com/photo-1616394584738-fc6e612e71b9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bWFzc2FnZSUyMGZhY2V8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60);
-}
-.dpt-menu .electric ul{
-    background-image: url(https://images.unsplash.com/photo-1616394584738-fc6e612e71b9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bWFzc2FnZSUyMGZhY2V8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60);
-}
-.dpt-menu .fashion ul{
-    background-image: url(https://images.unsplash.com/photo-1616394584738-fc6e612e71b9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bWFzc2FnZSUyMGZhY2V8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60);
-}
-.dpt-menu .homekit .mega{
+
+.dpt-menu .beauty ul {
     background-image: url(https://images.unsplash.com/photo-1616394584738-fc6e612e71b9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bWFzc2FnZSUyMGZhY2V8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60);
 }
 
-.dpt-menu .has-child > :where(ul,.mega)::before{
+.dpt-menu .electric ul {
+
+    background-image: url(https://images.unsplash.com/photo-1616394584738-fc6e612e71b9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bWFzc2FnZSUyMGZhY2V8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60);
+}
+
+.dpt-menu .fashion ul {
+    background-image: url(https://images.unsplash.com/photo-1616394584738-fc6e612e71b9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bWFzc2FnZSUyMGZhY2V8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60);
+}
+
+.dpt-menu .homekit .mega {
+    
+    background-image: url(https://images.unsplash.com/photo-1616394584738-fc6e612e71b9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bWFzc2FnZSUyMGZhY2V8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60);
+    background-size: 110%;
+}
+
+.dpt-menu .has-child> :where(ul, .mega)::before {
     content: '';
     position: absolute;
     top: 0;
@@ -450,17 +459,19 @@ nav .fly-item {
     bottom: 0;
     /* background: linear-gradient(); */
 }
-.dpt-menu .mega{
- 
+
+.dpt-menu .mega {
+
     width: auto;
     min-width: var(--percent100);
 
 }
-.dpt-menu .has-child:hover .mega{
+
+.dpt-menu .has-child:hover .mega {
     display: flex;
 }
 
-.dpt-menu .has-child:hover ul{
+.dpt-menu .has-child:hover ul {
     display: block;
 }
 
@@ -666,4 +677,11 @@ form.search button:hover {
     .header-main .right {
         max-width: 600px;
     }
+}
+
+
+/* Responsive Menu - off canvas */
+.site-top{
+    position: fixed;
+    width: 32px;
 }
