--- a/Building a Stock Media Platform/css/style.css
+++ b/Building a Stock Media Platform/css/style.css
@@ -6,10 +6,6 @@
  * copyright 2023 codewithsadee
  */
 
-
-
-
-
 /*-----------------------------------*\
   #CUSTOM PROPERTY
 \*-----------------------------------*/
@@ -17,72 +13,72 @@
 :root {
   --scrim: #000000;
   /* Light colors */
-  --light-background: #FAFDFC;
-  --light-on-background: #191C1C;
-  --light-surface: #F7FAF9;
-  --light-on-surface: #191C1C;
-  --light-surface-variant: #DAE5E3;
-  --light-on-surface-variant: #3F4948;
-  --light-surface-container-high: #E6E9E8;
-  --light-surface-container-highest: #E0E3E2;
-  --light-surface-container: #ECEEED;
-  --light-outline: #6F7978;
-  --light-outline-variant: #BEC9C7;
-  --light-primary: #006A67;
-  --light-on-primary: #FFFFFF;
-  --light-primary-container: #6FF7F2;
-  --light-on-primary-container: #00201F;
+  --light-background: #fafdfc;
+  --light-on-background: #191c1c;
+  --light-surface: #f7faf9;
+  --light-on-surface: #191c1c;
+  --light-surface-variant: #dae5e3;
+  --light-on-surface-variant: #3f4948;
+  --light-surface-container-high: #e6e9e8;
+  --light-surface-container-highest: #e0e3e2;
+  --light-surface-container: #eceeed;
+  --light-outline: #6f7978;
+  --light-outline-variant: #bec9c7;
+  --light-primary: #006a67;
+  --light-on-primary: #ffffff;
+  --light-primary-container: #6ff7f2;
+  --light-on-primary-container: #00201f;
   --light-secondary: #845400;
-  --light-on-secondary: #FFFFFF;
-  --light-secondary-container: #FFDDB5;
-  --light-on-secondary-container: #2A1800;
-  --light-tertiary: #A93538;
-  --light-on-tertiary: #FFFFFF;
-  --light-tertiary-container: #FFDAD8;
+  --light-on-secondary: #ffffff;
+  --light-secondary-container: #ffddb5;
+  --light-on-secondary-container: #2a1800;
+  --light-tertiary: #a93538;
+  --light-on-tertiary: #ffffff;
+  --light-tertiary-container: #ffdad8;
   --light-on-tertiary-container: #410006;
-  --light-error: #BA1A1A;
-  --light-on-error: #FFFFFF;
-  --light-error-container: #FFDAD6;
+  --light-error: #ba1a1a;
+  --light-on-error: #ffffff;
+  --light-error-container: #ffdad6;
   --light-on-error-container: #410002;
-  --light-inverse-surface: #2D3131;
-  --light-inverse-on-surface: #EFF1F0;
-  --light-inverse-primary: #4EDAD5;
+  --light-inverse-surface: #2d3131;
+  --light-inverse-on-surface: #eff1f0;
+  --light-inverse-primary: #4edad5;
   /* Dark colors */
-  --dark-background: #191C1C;
-  --dark-on-background: #E0E3E2;
+  --dark-background: #191c1c;
+  --dark-on-background: #e0e3e2;
   --dark-surface: #101414;
-  --dark-on-surface: #C4C7C6;
-  --dark-surface-variant: #3F4948;
-  --dark-on-surface-variant: #BEC9C7;
-  --dark-surface-container-high: #272B2A;
+  --dark-on-surface: #c4c7c6;
+  --dark-surface-variant: #3f4948;
+  --dark-on-surface-variant: #bec9c7;
+  --dark-surface-container-high: #272b2a;
   --dark-surface-container-highest: #323535;
-  --dark-surface-container: #1D2020;
+  --dark-surface-container: #1d2020;
   --dark-outline: #889392;
-  --dark-outline-variant: #3F4948;
-  --dark-primary: #4EDAD5;
+  --dark-outline-variant: #3f4948;
+  --dark-primary: #4edad5;
   --dark-on-primary: #003735;
-  --dark-primary-container: #00504E;
-  --dark-on-primary-container: #6FF7F2;
-  --dark-secondary: #FFB958;
-  --dark-on-secondary: #462B00;
-  --dark-secondary-container: #643F00;
-  --dark-on-secondary-container: #FFDDB5;
-  --dark-tertiary: #FFB3B0;
-  --dark-on-tertiary: #68000F;
-  --dark-tertiary-container: #891C23;
-  --dark-on-tertiary-container: #FFDAD8;
-  --dark-error: #FFB4AB;
+  --dark-primary-container: #00504e;
+  --dark-on-primary-container: #6ff7f2;
+  --dark-secondary: #ffb958;
+  --dark-on-secondary: #462b00;
+  --dark-secondary-container: #643f00;
+  --dark-on-secondary-container: #ffddb5;
+  --dark-tertiary: #ffb3b0;
+  --dark-on-tertiary: #68000f;
+  --dark-tertiary-container: #891c23;
+  --dark-on-tertiary-container: #ffdad8;
+  --dark-error: #ffb4ab;
   --dark-on-error: #690005;
-  --dark-error-container: #93000A;
-  --dark-on-error-container: #FFDAD6;
-  --dark-inverse-surface: #E0E3E2;
-  --dark-inverse-on-surface: #191C1C;
-  --dark-inverse-primary: #006A67;
+  --dark-error-container: #93000a;
+  --dark-on-error-container: #ffdad6;
+  --dark-inverse-surface: #e0e3e2;
+  --dark-inverse-on-surface: #191c1c;
+  --dark-inverse-primary: #006a67;
   /*
   Typography
 */
   /* Font family */
-  --ff-primary: 'Work Sans', sans-serif;
+  --ff-primary: "Work Sans", sans-serif;
   /* Font size */
   --fs-base: 62.5%;
   --fs-display-large: 5.7rem;
@@ -119,17 +115,15 @@
   /* 
   ### Elevation
   */
-  --elevation-1: 0 1px 2px hsla(0, 0%, 0%, 0.3), 0 1px 3px 1px hsla(0, 0%, 0%, 0.15);
-  --elevation-2: 0 1px 2px hsla(0, 0%, 0%, 0.3), 0 2px 6px 2px hsla(0, 0%, 0%, 0.15);
+  --elevation-1: 0 1px 2px hsla(0, 0%, 0%, 0.3),
+    0 1px 3px 1px hsla(0, 0%, 0%, 0.15);
+  --elevation-2: 0 1px 2px hsla(0, 0%, 0%, 0.3),
+    0 2px 6px 2px hsla(0, 0%, 0%, 0.15);
   /* ### Others */
   --top-app-bar-height: 64px;
-
-
-
 }
 
-@media(prefers-reduced-motion:no-preference) {
-
+@media (prefers-reduced-motion: no-preference) {
   /* TRANSITION */
   :root {
     /* Duration */
@@ -152,71 +146,71 @@
 /* thay đổi nền sáng cho trang web */
 [data-theme="light"] {
   color-scheme: light;
-  --background: var(--light-background: #FAFDFC; );
-  --on-background: var(--light-on-background: #191C1C; );
-  --surface: var(--light-surface: #F7FAF9; );
-  --on-surface: var(--light-on-surface: #191C1C; );
-  --surface-variant: var(--light-surface-variant: #DAE5E3; );
-  --on-surface-variant: var(--light-on-surface-variant: #3F4948; );
-  --surface-container-high: var(--light-surface-container-high: #E6E9E8; );
-  --surface-container-highest: var(--light-surface-container-highest: #E0E3E2; );
-  --surface-container: var(--light-surface-container: #ECEEED; );
-  --outline: var(--light-outline: #6F7978; );
-  --outline-variant: var(--light-outline-variant: #BEC9C7; );
-  --primary: var(--light-primary: #006A67; );
-  --on-primary: var(--light-on-primary: #FFFFFF; );
-  --primary-container: var(--light-primary-container: #6FF7F2; );
-  --on-primary-container: var(--light-on-primary-container: #00201F; );
-  --secondary: var(--light-secondary: #845400; );
-  --on-secondary: var(--light-on-secondary: #FFFFFF; );
-  --secondary-container: var(--light-secondary-container: #FFDDB5; );
-  --on-secondary-container: var(--light-on-secondary-container: #2A1800; );
-  --tertiary: var(--light-tertiary: #A93538; );
-  --on-tertiary: var(--light-on-tertiary: #FFFFFF; );
-  --tertiary-container: var(--light-tertiary-container: #FFDAD8; );
-  --on-tertiary-container: var(--light-on-tertiary-container: #410006; );
-  --error: var(--light-error: #BA1A1A; );
-  --on-error: var(--light-on-error: #FFFFFF; );
-  --error-container: var(--light-error-container: #FFDAD6; );
-  --on-error-container: var(--light-on-error-container: #410002; );
-  --inverse-surface: var(--light-inverse-surface: #2D3131; );
-  --inverse-on-surface: var(--light-inverse-on-surface: #EFF1F0; );
-  --inverse-primary: var(--light-inverse-primary: #4EDAD5; );
+  --background: var(--light-background);
+  --on-background: var(--light-on-background);
+  --surface: var(--light-surface);
+  --on-surface: var(--light-on-surface);
+  --surface-variant: var(--light-surface-variant);
+  --on-surface-variant: var(--light-on-surface-variant);
+  --surface-container-high: var(--light-surface-container-high);
+  --surface-container-highest: var(--light-surface-container-highest);
+  --surface-container: var(--light-surface-container);
+  --outline: var(--light-outline);
+  --outline-variant: var(--light-outline-variant);
+  --primary: var(--light-primary);
+  --on-primary: var(--light-on-primary);
+  --primary-container: var(--light-primary-container);
+  --on-primary-container: var(--light-on-primary-container);
+  --secondary: var(--light-secondary);
+  --on-secondary: var(--light-on-secondary);
+  --secondary-container: var(--light-secondary-container);
+  --on-secondary-container: var(--light-on-secondary-container);
+  --tertiary: var(--light-tertiary);
+  --on-tertiary: var(--light-on-tertiary);
+  --tertiary-container: var(--light-tertiary-container);
+  --on-tertiary-container: var(--light-on-tertiary-container);
+  --error: var(--light-error);
+  --on-error: var(--light-on-error);
+  --error-container: var(--light-error-container);
+  --on-error-container: var(--light-on-error-container);
+  --inverse-surface: var(--light-inverse-surface);
+  --inverse-on-surface: var(--light-inverse-on-surface);
+  --inverse-primary: var(--light-inverse-primary);
 }
 
 /* thay đổi nền tối cho trang web */
 [data-theme="dark"] {
   color-scheme: dark;
-  --background: var(--dark-background: #FAFDFC; );
-  --on-background: var(--dark-on-background: #191C1C; );
-  --surface: var(--dark-surface: #F7FAF9; );
-  --on-surface: var(--dark-on-surface: #191C1C; );
-  --surface-variant: var(--dark-surface-variant: #DAE5E3; );
-  --on-surface-variant: var(--dark-on-surface-variant: #3F4948; );
-  --surface-container-high: var(--dark-surface-container-high: #E6E9E8; );
-  --surface-container-highest: var(--dark-surface-container-highest: #E0E3E2; );
-  --surface-container: var(--dark-surface-container: #ECEEED; );
-  --outline: var(--dark-outline: #6F7978; );
-  --outline-variant: var(--dark-outline-variant: #BEC9C7; );
-  --primary: var(--dark-primary: #006A67; );
-  --on-primary: var(--dark-on-primary: #FFFFFF; );
-  --primary-container: var(--dark-primary-container: #6FF7F2; );
-  --on-primary-container: var(--dark-on-primary-container: #00201F; );
-  --secondary: var(--dark-secondary: #845400; );
-  --on-secondary: var(--dark-on-secondary: #FFFFFF; );
-  --secondary-container: var(--dark-secondary-container: #FFDDB5; );
-  --on-secondary-container: var(--dark-on-secondary-container: #2A1800; );
-  --tertiary: var(--dark-tertiary: #A93538; );
-  --on-tertiary: var(--dark-on-tertiary: #FFFFFF; );
-  --tertiary-container: var(--dark-tertiary-container: #FFDAD8; );
-  --on-tertiary-container: var(--dark-on-tertiary-container: #410006; );
-  --error: var(--dark-error: #BA1A1A; );
-  --on-error: var(--dark-on-error: #FFFFFF; );
-  --error-container: var(--dark-error-container: #FFDAD6; );
-  --on-error-container: var(--dark-on-error-container: #410002; );
-  --inverse-surface: var(--dark-inverse-surface: #2D3131; );
-  --inverse-on-surface: var(--dark-inverse-on-surface: #EFF1F0; );
-  --inverse-primary: var(--dark-inverse-primary: #4EDAD5; );
+  --background: var(--dark-background);
+  --on-background: var(--dark-on-background);
+  --surface: var(--dark-surface);
+  --on-surface: var(--dark-on-surface);
+  --surface-variant: var(--dark-surface-variant);
+  --on-surface-variant: var(--dark-on-surface-variant);
+  --surface-container-high: var(--dark-surface-container-high);
+  --surface-container-highest: var(--dark-surface-container-highest);
+  --surface-container: var(--dark-surface-container);
+  --outline: var(--dark-outline);
+  --outline-variant: var(--dark-outline-variant);
+  --primary: var(--dark-primary);
+  --on-primary: var(--dark-on-primary);
+  --primary-container: var(--dark-primary-container);
+  --on-primary-container: var(--dark-on-primary-container);
+  --secondary: var(--dark-secondary);
+  --on-secondary: var(--dark-on-secondary);
+  --secondary-container: var(--dark-secondary-container);
+  --on-secondary-container: var(--dark-on-secondary-container);
+  --tertiary: var(--dark-tertiary);
+  --on-tertiary: var(--dark-on-tertiary);
+  --tertiary-container: var(--dark-tertiary-container);
+  --on-tertiary-container: var(--dark-on-tertiary-container);
+  --error: var(--dark-error);
+  --on-error: var(--dark-on-error);
+  --error-container: var(--dark-error-container);
+  --on-error-container: var(--dark-on-error-container);
+  --inverse-surface: var(--dark-inverse-surface);
+  --inverse-on-surface: var(--dark-inverse-on-surface);
+  --inverse-primary: var(--dark-inverse-primary);
 }
 
 /*-----------------------------------*\
@@ -278,7 +272,8 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  transition: opacity var(--motion-duration-medium-2) var(--motion-easing-linear);
+  transition: opacity var(--motion-duration-medium-2)
+    var(--motion-easing-linear);
 }
 
 button:disabled {
@@ -384,11 +379,63 @@ button:disabled {
 /*-----------------------------------*\
   #REUSED STYLE
 \*-----------------------------------*/
-
-
-
-
-
+/* icon  */
+.material-symbols-outlined{
+  display: block;
+  width: 1em;
+  height: 1em;
+  font-variation-settings:'FILL'0,'wght'400,'GRAD'0,'opsz'24
+}
+/* :has(.state-layer){
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+} */
+.ripple, .state-layer{
+  background-color: var(--state-layer-bg);
+  position: absolute;
+  pointer-events: none;
+  z-index: 1;
+}
+.state-layer{
+border-radius: inherit;
+inset: 0;
+opacity: 0;
+transition: var(--motion-duration-short-2) var(--motion-easing-linear);
+}
+:has(.state-layer):hover>.state-layer{opacity: 0.08;}
+:has(.state-layer):hover>:is(:focus,:focus-visible,:active)>.state-layer{
+opacity: 0.12;
+}
+.ripple{
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  transform-origin: center;
+  border-radius: var(--radius-circle);
+  opacity: 0.12;
+  animation: ripple 800ms var(--motion-easing-standard) forwards;
+}
+@keyframes ripple{
+  0%{
+    scale:0
+  }
+  100%{
+    scale:2.5
+  }
+}
+.logo{
+  color: var(--primary);
+  font-size: 2.6rem;
+  font-weight: var(--weight-medium);
+  line-height: 28px;
+  letter-spacing: -0.5px;
+}
+.divider{
+  height: 1px;
+  max-width: 100%;
+  background-color: var(--outline-variant);
+}
 /*-----------------------------------*\
   #COMPONENT
 \*-----------------------------------*/
@@ -396,135 +443,156 @@ button:disabled {
 /**
  * Icon button
  */
-
-
+.icon-btn{
+  color: var(--on-surface-variant);
+  --state-layer-bg:var(--on-surface-variant);
+  position: relative;
+  min-width: 48px;
+  height: 48px;
+  display: grid;
+  place-items: center;
+  border-radius: var(--radius-circle);
+}
+.icon-btn > .state-layer{inset: 4px;}
+.icon-btn > .ripple{
+  width: 40px;
+  height: 40px;
+  animation: icon-button-ripple 200ms var(--motion-easing-standard);
+}
+@keyframes icon-button-ripple {
+  0%{
+    scale:0
+  }
+  100%{
+    scale:1
+  }
+}
 /**
  * Segment button
  */
-
 
 /**
  * Split btn
  */
 
-
 /**
  * Search view
  */
-
-
+.search-view{
+  background-color: var(--surface-container-high);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100dvh;
+  z-index: 5;
+  opacity: 0;
+  visibility: hidden;
+  transition: var(--motion-duration-short-2) var(--motion-easing-standard);
+  transition-property: opacity,visibility;
+}
+/* thêm show vào class */
+.search-view.show{
+  opacity: 1;
+  visibility: visible;
+}
 /**
  * List
  */
-
 
 /**
  * Navigation
  */
 
-
 /**
  * Button
  */
-
 
 /**
  * Card
  */
 
-
 /**
  * Menu
  */
-
 
 /**
  * Filter chip
  */
 
-
-
-
-
 /*-----------------------------------*\
   #TOP APP BAR
 \*-----------------------------------*/
-
-
-
-
-
+/* .search-view {
+  display: none;
+} */
+.top-app-bar {
+  background-color: var(--surface);
+  display: flex;
+  /* canh giữa trong display flex */
+  align-items: center;
+  padding-inline: 4px;
+  height: var(--top-app-bar-height);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 4;
+  transition: background-color var(--motion-duration-short-2)
+    var(--motion-easing-linear);
+}
+/* khi active thì đổi màu top-app-bar */
+.top-app-bar.active {
+  background-color: var(--surface-container);
+}
+.top-app-bar .logo{
+  /* giản cách giữa logo và button */
+  margin-inline: 4px auto;
+}
+/* thay đổi màu sáng tối của trang html
+  khi "light" được chọn sẽ ẩn đi icon
+*/
+[data-theme="dark"] .theme-btn .dark-icon,
+[data-theme="light"] .theme-btn .light-icon{
+  display: none;
+}
+.search-view-content .divider{
+ margin-inline: 16px;
+}
 /*-----------------------------------*\
   #SCRIM
 \*-----------------------------------*/
-
-
-
-
 
 /*-----------------------------------*\
   #MAIN
 \*-----------------------------------*/
 
-
-
-
-
 /*-----------------------------------*\
   #BANNER
 \*-----------------------------------*/
-
-
-
-
 
 /*-----------------------------------*\
   #CURATED PHOTOS & POPULAR VIDEO
 \*-----------------------------------*/
 
-
-
-
-
 /*-----------------------------------*\
   #COLLECTION
 \*-----------------------------------*/
-
-
-
-
 
 /*-----------------------------------*\
   #FOOTER
 \*-----------------------------------*/
 
-
-
-
-
 /*-----------------------------------*\
   #PHOTO PAGE
 \*-----------------------------------*/
-
-
-
-
 
 /*-----------------------------------*\
   #PHOTO DETAIL PAGE
 \*-----------------------------------*/
 
-
-
-
-
 /*-----------------------------------*\
   #FAVORITE PAGE
 \*-----------------------------------*/
-
-
-
-
 
 /*-----------------------------------*\
   #MEDIA QUERIES
